# NexCart-Digital-Monthly-Inventory-Revenue-Analytics

./: .env.example  .gitignore  README.md  all_reports_output.txt  dashboard_app.py  docker-compose.yaml  final_test_output.txt  inventory.db  inventory_v2.db  main.py  pipeline_output.txt  pyproject.toml  report_test_output.txt  requirements.txt  run_report.py  send_email_only.py  start_dashboard.bat
config/: settings.example.py
dags/: monthly_inventory_report_dag.py
db/: init_db.py  schema.sql  seed_data.sql
docs/: architecture.md  data_model.md  pipeline_runbook.md
notebooks/: 01_schema_and_data_exploration.ipynb  02_kpi_and_forecast_exploration.ipynb
reports/: voice_memory.json
reports/2025-07/: customer_demographics_report.html  executive_summary.pptx  index.html  inventory_health_report.html  payment_analysis_report.html  product_performance_report.html  sales_channel_report.html
reports/2025-08/: customer_demographics_report.html  executive_summary.pptx  index.html  inventory_health_report.html  payment_analysis_report.html  product_performance_report.html  sales_channel_report.html
reports/2025-09/: customer_demographics_report.html  executive_summary.pptx  index.html  inventory_health_report.html  payment_analysis_report.html  product_performance_report.html  (+1 more)
scripts/: generate_all_reports.py  generate_multi_month_data.py  run_local_monthly_job.py  send_monthly_report.py  simple_etl.py  verify_email.py  verify_llm.py
spark_jobs/: etl_raw_to_cleaned.py  kpi_aggregation.py
src/: db_client.py  email_client.py  llm_client.py
(+38 files in other folders)
