[project]
name = "nov-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=2.8.0",
    "dash>=2.14.0",
    "elevenlabs>=1.0.0",
    "faker>=20.0.0",
    "jinja2>=3.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "matplotlib>=3.7.0",
    "openai>=0.28.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyspark>=3.5.0",
    "pytest>=7.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=0.6.21",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "typing-extensions>=4.0.0",
]
